--- a/detectivesoft/build.gradle
+++ b/detectivesoft/build.gradle
@@ -12,6 +12,11 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
+
+	tasks.withType(JavaCompile) {
+    	options.compilerArgs += ['-parameters']
+	}
+
 }
 
 repositories {
